# ci-cd-example

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/: docker-build.yaml
.github/workflows/: docker-build.yaml  manual-docker.yaml
src/: README.md  new_pipeline.py  pipeline.dockerfile  pipeline.yaml
